[gd_scene load_steps=19 format=2]

[ext_resource path="res://Location/DownWorld/assets5/shop.png" type="Texture" id=1]
[ext_resource path="res://Location/DownWorld/scriptes5/Player.gd" type="Script" id=2]
[ext_resource path="res://Location/DownWorld/scenes5/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Location/DownWorld/tileset5/wall.tres" type="TileSet" id=4]
[ext_resource path="res://Location/DownWorld/assets5/player.png" type="Texture" id=5]
[ext_resource path="res://Location/DownWorld/scenes5/Boss.tscn" type="PackedScene" id=6]
[ext_resource path="res://Location/DownWorld/scenes5/Ghost.tscn" type="PackedScene" id=7]
[ext_resource path="res://Location/DownWorld/scenes5/HellDog.tscn" type="PackedScene" id=8]
[ext_resource path="res://Location/DownWorld/scriptes5/world.gd" type="Script" id=9]
[ext_resource path="res://Location/DownWorld/assets5/spells/fire-ball.png" type="Texture" id=10]
[ext_resource path="res://Location/DownWorld/scenes5/UI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Location/DownWorld/scenes5/Boss2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Location/DownWorld/scenes5/Teleport.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 19, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 38, 0, 19, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="world" type="Node2D"]
script = ExtResource( 9 )

[node name="Player" type="KinematicBody2D" parent="."]
rotation = -1.5708
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player" groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="Player"]
modulate = Color( 0.996078, 0.572549, 0.572549, 1 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
shadow_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
playing = true
flip_h = true

[node name="SpellTimer" type="Timer" parent="Player"]

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 1020, 1072 )

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 751, 721 )

[node name="Enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( -53, 689 )

[node name="Enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 678, 203 )

[node name="Enemy5" parent="." instance=ExtResource( 3 )]
position = Vector2( 481, -9 )

[node name="Enemy6" parent="." instance=ExtResource( 3 )]
position = Vector2( 730, -220 )

[node name="Enemy7" parent="." instance=ExtResource( 3 )]
position = Vector2( 998, -473 )

[node name="Enemy8" parent="." instance=ExtResource( 3 )]
position = Vector2( 392, 501 )

[node name="Enemy9" parent="." instance=ExtResource( 3 )]
position = Vector2( 1503, 743 )

[node name="Enemy10" parent="." instance=ExtResource( 3 )]
position = Vector2( -379, 1035 )

[node name="Enemy11" parent="." instance=ExtResource( 3 )]
position = Vector2( -150, 1061 )

[node name="Enemy12" parent="." instance=ExtResource( 3 )]
position = Vector2( 206, 205 )

[node name="Enemy13" parent="." instance=ExtResource( 3 )]
position = Vector2( -6, -473 )

[node name="Enemy14" parent="." instance=ExtResource( 3 )]
position = Vector2( 1350, -244 )

[node name="Enemy15" parent="." instance=ExtResource( 3 )]
position = Vector2( 1579, 319 )

[node name="Enemy16" parent="." instance=ExtResource( 3 )]
position = Vector2( 74, 1090 )

[node name="Enemy17" parent="." instance=ExtResource( 3 )]
position = Vector2( 897, 1281 )

[node name="Enemy18" parent="." instance=ExtResource( 3 )]
position = Vector2( 1227, 306 )

[node name="Enemy19" parent="." instance=ExtResource( 3 )]
position = Vector2( 1320, 1307 )

[node name="Enemy20" parent="." instance=ExtResource( 3 )]
position = Vector2( 1490, 951 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.227451, 0.227451, 1 )
position = Vector2( 476.5, 378.5 )
scale = Vector2( 34.63, 28.17 )
z_index = -1
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.682353, 0.117647, 0.117647, 1 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2686955, 0, 0, -2686954, 0, 0, -2686953, 0, 0, -2686952, 0, 0, -2686951, 0, 0, -2686950, 0, 0, -2686949, 0, 0, -2686948, 0, 0, -2686947, 0, 0, -2686946, 0, 0, -2686945, 0, 0, -2686944, 0, 0, -2686943, 0, 0, -2686942, 0, 0, -2686941, 0, 0, -2686940, 0, 0, -2686939, 0, 0, -2686938, 0, 0, -2686937, 0, 0, -2686936, 0, 0, -2621431, 0, 0, -2621430, 0, 0, -2621429, 0, 0, -2621428, 0, 0, -2621427, 0, 0, -2621426, 0, 0, -2621425, 0, 0, -2621424, 0, 0, -2621423, 0, 0, -2621422, 0, 0, -2621421, 0, 0, -2621420, 0, 0, -2621399, 0, 0, -2621398, 0, 0, -2621397, 0, 0, -2621396, 0, 0, -2621395, 0, 0, -2621394, 0, 0, -2621393, 0, 0, -2621392, 0, 0, -2621391, 0, 0, -2621390, 0, 0, -2621389, 0, 0, -2621388, 0, 0, -2621387, 0, 0, -2621386, 0, 0, -2621385, 0, 0, -2621384, 0, 0, -2621383, 0, 0, -2621382, 0, 0, -2621381, 0, 0, -2621380, 0, 0, -2621379, 0, 0, -2621378, 0, 0, -2621377, 0, 0, -2621376, 0, 0, -2621375, 0, 0, -2621374, 0, 0, -2621373, 0, 0, -2621372, 0, 0, -2621371, 0, 0, -2621370, 0, 0, -2490380, 0, 0, -2490374, 0, 0, -2490373, 0, 0, -2490372, 0, 0, -2490371, 0, 0, -2490370, 0, 0, -2490369, 0, 0, -2555904, 0, 0, -2555903, 0, 0, -2555902, 0, 0, -2555901, 0, 0, -2555900, 0, 0, -2555899, 0, 0, -2555898, 0, 0, -2555897, 0, 0, -2555896, 0, 0, -2555834, 0, 0, -2424844, 0, 0, -2490298, 0, 0, -2359308, 0, 0, -2424762, 0, 0, -2293772, 0, 0, -2359225, 0, 0, -2228236, 0, 0, -2293689, 0, 0, -2162700, 0, 0, -2228153, 0, 0, -2097164, 0, 0, -2162617, 0, 0, -2031628, 0, 0, -2097080, 0, 0, -1966092, 0, 0, -2031544, 0, 0, -1900556, 0, 0, -1966008, 0, 0, -1835020, 0, 0, -1900472, 0, 0, -1769484, 0, 0, -1834936, 0, 0, -1703948, 0, 0, -1769400, 0, 0, -1638412, 0, 0, -1703864, 0, 0, -1703862, 0, 0, -1703861, 0, 0, -1703860, 0, 0, -1572876, 0, 0, -1638327, 0, 0, -1638323, 0, 0, -1638322, 0, 0, -1638321, 0, 0, -1638320, 0, 0, -1638319, 0, 0, -1638318, 0, 0, -1638317, 0, 0, -1638316, 0, 0, -1638315, 0, 0, -1638314, 0, 0, -1638313, 0, 0, -1638312, 0, 0, -1638311, 0, 0, -1638310, 0, 0, -1638309, 0, 0, -1638308, 0, 0, -1638307, 0, 0, -1638306, 0, 0, -1638305, 0, 0, -1638304, 0, 0, -1638303, 0, 0, -1638302, 0, 0, -1572856, 0, 0, -1572855, 0, 0, -1572791, 0, 0, -1572766, 0, 0, -1507326, 0, 0, -1507325, 0, 0, -1507324, 0, 0, -1507323, 0, 0, -1507322, 0, 0, -1507321, 0, 0, -1507318, 0, 0, -1507317, 0, 0, -1507316, 0, 0, -1507315, 0, 0, -1507314, 0, 0, -1507313, 0, 0, -1507312, 0, 0, -1507311, 0, 0, -1507310, 0, 0, -1507309, 0, 0, -1507255, 0, 0, -1507230, 0, 0, -1376283, 0, 0, -1376282, 0, 0, -1376258, 0, 0, -1376257, 0, 0, -1441792, 0, 0, -1441791, 0, 0, -1441772, 0, 0, -1441771, 0, 0, -1441743, 0, 0, -1441719, 0, 0, -1441694, 0, 0, -1310746, 0, 0, -1310745, 0, 0, -1310744, 0, 0, -1310743, 0, 0, -1310742, 0, 0, -1310741, 0, 0, -1310740, 0, 0, -1310739, 0, 0, -1310738, 0, 0, -1310737, 0, 0, -1310736, 0, 0, -1310735, 0, 0, -1310734, 0, 0, -1310733, 0, 0, -1310732, 0, 0, -1310731, 0, 0, -1310730, 0, 0, -1310729, 0, 0, -1310728, 0, 0, -1310727, 0, 0, -1310726, 0, 0, -1310725, 0, 0, -1310724, 0, 0, -1310723, 0, 0, -1376207, 0, 0, -1376183, 0, 0, -1376158, 0, 0, -1310671, 0, 0, -1310670, 0, 0, -1310647, 0, 0, -1310622, 0, 0, -1245134, 0, 0, -1245111, 0, 0, -1245086, 0, 0, -1179598, 0, 0, -1179550, 0, 0, -1114062, 0, 0, -1114014, 0, 0, -983067, 0, 0, -1048526, 0, 0, -1048478, 0, 0, -917531, 0, 0, -982990, 0, 0, -982942, 0, 0, -851994, 0, 0, -917454, 0, 0, -917406, 0, 0, -786458, 0, 0, -851918, 0, 0, -851870, 0, 0, -720922, 0, 0, -786382, 0, 0, -786334, 0, 0, -655386, 0, 0, -720863, 0, 0, -720862, 0, 0, -720861, 0, 0, -720860, 0, 0, -720859, 0, 0, -720858, 0, 0, -720857, 0, 0, -720846, 0, 0, -720798, 0, 0, -589850, 0, 0, -655321, 0, 0, -655320, 0, 0, -655319, 0, 0, -655318, 0, 0, -655317, 0, 0, -655316, 0, 0, -655315, 0, 0, -655314, 0, 0, -655313, 0, 0, -655312, 0, 0, -655311, 0, 0, -655310, 0, 0, -655309, 0, 0, -655308, 0, 0, -655261, 0, 0, -524314, 0, 0, -589773, 0, 0, -589771, 0, 0, -589770, 0, 0, -589769, 0, 0, -589768, 0, 0, -589767, 0, 0, -589766, 0, 0, -589765, 0, 0, -589764, 0, 0, -589763, 0, 0, -589762, 0, 0, -589761, 0, 0, -589760, 0, 0, -589759, 0, 0, -589758, 0, 0, -589757, 0, 0, -589756, 0, 0, -589755, 0, 0, -589754, 0, 0, -589753, 0, 0, -589752, 0, 0, -589751, 0, 0, -589750, 0, 0, -589749, 0, 0, -589748, 0, 0, -589747, 0, 0, -589746, 0, 0, -589745, 0, 0, -589744, 0, 0, -589743, 0, 0, -589742, 0, 0, -589741, 0, 0, -589740, 0, 0, -589739, 0, 0, -589738, 0, 0, -589725, 0, 0, -458778, 0, 0, -524272, 0, 0, -524237, 0, 0, -524189, 0, 0, -393242, 0, 0, -458736, 0, 0, -458701, 0, 0, -458653, 0, 0, -327706, 0, 0, -393200, 0, 0, -393165, 0, 0, -393117, 0, 0, -262170, 0, 0, -327664, 0, 0, -327581, 0, 0, -196634, 0, 0, -262128, 0, 0, -262068, 0, 0, -262045, 0, 0, -131098, 0, 0, -196592, 0, 0, -196508, 0, 0, -65562, 0, 0, -131056, 0, 0, -130997, 0, 0, -130972, 0, 0, -26, 0, 0, -65520, 0, 0, -65462, 0, 0, -65436, 0, 0, 65510, 0, 0, 16, 0, 0, 74, 0, 0, 100, 0, 0, 131046, 0, 0, 65552, 0, 0, 65610, 0, 0, 65636, 0, 0, 196582, 0, 0, 131088, 0, 0, 131146, 0, 0, 131172, 0, 0, 262118, 0, 0, 196624, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196656, 0, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196682, 0, 0, 196708, 0, 0, 327654, 0, 0, 262160, 0, 0, 262218, 0, 0, 262244, 0, 0, 393190, 0, 0, 327696, 0, 0, 327754, 0, 0, 327780, 0, 0, 458726, 0, 0, 393232, 0, 0, 393316, 0, 0, 524262, 0, 0, 458768, 0, 0, 458841, 0, 0, 458853, 0, 0, 589798, 0, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524304, 0, 0, 524337, 0, 0, 524377, 0, 0, 524389, 0, 0, 655334, 0, 0, 589833, 1, 0, 589840, 0, 0, 589873, 0, 0, 589913, 0, 0, 589925, 0, 0, 720870, 0, 0, 655369, 1, 0, 655376, 0, 0, 655409, 0, 0, 655449, 0, 0, 655461, 0, 0, 786406, 0, 0, 720905, 1, 0, 720945, 0, 0, 720985, 0, 0, 720997, 0, 0, 851942, 0, 0, 786441, 1, 0, 786481, 0, 0, 786521, 0, 0, 786533, 0, 0, 917479, 0, 0, 851977, 1, 0, 852017, 0, 0, 852057, 0, 0, 852069, 0, 0, 983015, 0, 0, 917513, 1, 0, 917514, 1, 0, 917593, 0, 0, 917605, 0, 0, 1048551, 0, 0, 983049, 1, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983086, 0, 0, 983087, 0, 0, 983088, 0, 0, 983089, 0, 0, 983090, 0, 0, 983091, 0, 0, 983092, 0, 0, 983129, 0, 0, 983141, 0, 0, 1114087, 0, 0, 1048665, 0, 0, 1048677, 0, 0, 1179623, 0, 0, 1179638, 0, 0, 1179639, 0, 0, 1179640, 0, 0, 1114178, 0, 0, 1114201, 0, 0, 1114213, 0, 0, 1245159, 0, 0, 1245177, 0, 0, 1245178, 0, 0, 1245179, 0, 0, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179713, 0, 0, 1179737, 0, 0, 1179749, 0, 0, 1310696, 0, 0, 1245249, 0, 0, 1245273, 0, 0, 1245285, 0, 0, 1376232, 0, 0, 1310785, 0, 0, 1310809, 0, 0, 1310821, 0, 0, 1441768, 0, 0, 1376321, 0, 0, 1376345, 0, 0, 1376357, 0, 0, 1507304, 0, 0, 1441857, 0, 0, 1441881, 0, 0, 1441893, 0, 0, 1572840, 0, 0, 1507393, 0, 0, 1507404, 0, 0, 1507405, 0, 0, 1507406, 0, 0, 1507407, 0, 0, 1507429, 0, 0, 1638376, 0, 0, 1572928, 0, 0, 1572944, 0, 0, 1572945, 0, 0, 1572946, 0, 0, 1572947, 0, 0, 1572948, 0, 0, 1572949, 0, 0, 1572950, 0, 0, 1572951, 0, 0, 1572952, 0, 0, 1572953, 0, 0, 1572954, 0, 0, 1572955, 0, 0, 1572956, 0, 0, 1572957, 0, 0, 1572958, 0, 0, 1572959, 0, 0, 1572960, 0, 0, 1572961, 0, 0, 1572962, 0, 0, 1572965, 0, 0, 1703912, 0, 0, 1638464, 0, 0, 1638501, 0, 0, 1769448, 0, 0, 1769449, 0, 0, 1704000, 0, 0, 1704037, 0, 0, 1834985, 0, 0, 1769536, 0, 0, 1769573, 0, 0, 1900521, 0, 0, 1835072, 0, 0, 1835109, 0, 0, 1966057, 0, 0, 1900608, 0, 0, 1900645, 0, 0, 2031593, 0, 0, 1966113, 0, 0, 1966144, 0, 0, 1966181, 0, 0, 2097129, 0, 0, 2031649, 0, 0, 2031680, 0, 0, 2031717, 0, 0, 2162665, 0, 0, 2097185, 0, 0, 2097216, 0, 0, 2097220, 0, 0, 2097221, 0, 0, 2097222, 0, 0, 2097223, 0, 0, 2097224, 0, 0, 2097225, 0, 0, 2097226, 0, 0, 2097227, 0, 0, 2097228, 0, 0, 2097229, 0, 0, 2097230, 0, 0, 2097231, 0, 0, 2097232, 0, 0, 2097233, 0, 0, 2097234, 0, 0, 2097235, 0, 0, 2097253, 0, 0, 2228201, 0, 0, 2162721, 0, 0, 2162752, 0, 0, 2162772, 0, 0, 2162773, 0, 0, 2162774, 0, 0, 2162775, 0, 0, 2162789, 0, 0, 2293737, 0, 0, 2228257, 0, 0, 2228288, 0, 0, 2228324, 0, 0, 2228325, 0, 0, 2359273, 0, 0, 2293793, 0, 0, 2293824, 0, 0, 2293860, 0, 0, 2424809, 0, 0, 2359329, 0, 0, 2359360, 0, 0, 2359396, 0, 0, 2490345, 0, 0, 2424865, 0, 0, 2424896, 0, 0, 2424932, 0, 0, 2555881, 0, 0, 2490401, 0, 0, 2490432, 0, 0, 2490468, 0, 0, 2621417, 0, 0, 2555937, 0, 0, 2555968, 0, 0, 2556004, 0, 0, 2686953, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0, 2621473, 0, 0, 2621540, 0, 0, 2752489, 0, 0, 2687000, 0, 0, 2687001, 0, 0, 2687002, 0, 0, 2687003, 0, 0, 2687004, 0, 0, 2687009, 0, 0, 2687076, 0, 0, 2818025, 0, 0, 2752520, 0, 0, 2752521, 0, 0, 2752522, 0, 0, 2752523, 0, 0, 2752524, 0, 0, 2752525, 0, 0, 2752526, 0, 0, 2752527, 0, 0, 2752528, 0, 0, 2752529, 0, 0, 2752530, 0, 0, 2752531, 0, 0, 2752532, 0, 0, 2752533, 0, 0, 2752534, 0, 0, 2752535, 0, 0, 2752545, 0, 0, 2752612, 0, 0, 2883561, 0, 0, 2818082, 0, 0, 2818148, 0, 0, 2949097, 0, 0, 2883618, 0, 0, 2883684, 0, 0, 3014633, 0, 0, 2949154, 0, 0, 2949220, 0, 0, 3080169, 0, 0, 3014690, 0, 0, 3014756, 0, 0, 3145695, 0, 0, 3145696, 0, 0, 3145697, 0, 0, 3145698, 0, 0, 3145699, 0, 0, 3145700, 0, 0, 3145701, 0, 0, 3145702, 0, 0, 3145703, 0, 0, 3145704, 0, 0, 3145705, 0, 0, 3080226, 0, 0, 3080292, 0, 0, 3211231, 0, 0, 3211241, 0, 0, 3145762, 0, 0, 3276767, 0, 0, 3211298, 0, 0, 3342303, 0, 0, 3276834, 0, 0, 3407839, 0, 0, 3342370, 0, 0, 3342419, 0, 0, 3342420, 0, 0, 3342421, 0, 0, 3342422, 0, 0, 3342423, 0, 0, 3342424, 0, 0, 3342425, 0, 0, 3342426, 0, 0, 3342427, 0, 0, 3342428, 0, 0, 3342429, 0, 0, 3342430, 0, 0, 3342431, 0, 0, 3342432, 0, 0, 3342433, 0, 0, 3342434, 0, 0, 3342435, 0, 0, 3473375, 0, 0, 3407906, 0, 0, 3407938, 0, 0, 3407939, 0, 0, 3407940, 0, 0, 3407941, 0, 0, 3407942, 0, 0, 3407943, 0, 0, 3407944, 0, 0, 3407945, 0, 0, 3407946, 0, 0, 3407947, 0, 0, 3407948, 0, 0, 3407949, 0, 0, 3407950, 0, 0, 3407951, 0, 0, 3407952, 0, 0, 3407953, 0, 0, 3407954, 0, 0, 3538911, 0, 0, 3473442, 0, 0, 3473466, 0, 0, 3473467, 0, 0, 3473468, 0, 0, 3473469, 0, 0, 3473470, 0, 0, 3473471, 0, 0, 3473472, 0, 0, 3473473, 0, 0, 3604447, 0, 0, 3538978, 0, 0, 3538998, 0, 0, 3538999, 0, 0, 3539000, 0, 0, 3539001, 0, 0, 3669983, 0, 0, 3604514, 0, 0, 3735519, 0, 0, 3735532, 0, 0, 3735533, 0, 0, 3735534, 0, 0, 3735535, 0, 0, 3735536, 0, 0, 3735537, 0, 0, 3670050, 0, 0, 3801055, 0, 0, 3801074, 0, 0, 3801075, 0, 0, 3801076, 0, 0, 3801077, 0, 0, 3801078, 0, 0, 3801079, 0, 0, 3801080, 0, 0, 3801081, 0, 0, 3801082, 0, 0, 3801083, 0, 0, 3801084, 0, 0, 3735586, 0, 0, 3735587, 0, 0, 3735651, 0, 0, 3866591, 0, 0, 3866621, 0, 0, 3866622, 0, 0, 3866623, 0, 0, 3801088, 0, 0, 3801089, 0, 0, 3801090, 0, 0, 3801091, 0, 0, 3801092, 0, 0, 3801093, 0, 0, 3801167, 0, 0, 3801187, 0, 0, 3932127, 0, 0, 3866630, 0, 0, 3866631, 0, 0, 3866632, 0, 0, 3866633, 0, 0, 3866634, 0, 0, 3866635, 0, 0, 3866636, 0, 0, 3866637, 0, 0, 3866638, 0, 0, 3866639, 0, 0, 3866640, 0, 0, 3866641, 0, 0, 3866642, 0, 0, 3866643, 0, 0, 3866644, 0, 0, 3866703, 0, 0, 3866723, 0, 0, 3997663, 0, 0, 3932181, 0, 0, 3932182, 0, 0, 3932183, 0, 0, 3932184, 0, 0, 3932185, 0, 0, 3932186, 0, 0, 3932187, 0, 0, 3932188, 0, 0, 3932189, 0, 0, 3932190, 0, 0, 3932191, 0, 0, 3932192, 0, 0, 3932193, 0, 0, 3932194, 0, 0, 3932195, 0, 0, 3932196, 0, 0, 3932197, 0, 0, 3932198, 0, 0, 3932199, 0, 0, 3932200, 0, 0, 3932201, 0, 0, 3932239, 0, 0, 3932240, 0, 0, 3932259, 0, 0, 4063199, 0, 0, 3997776, 0, 0, 3997795, 0, 0, 4128735, 0, 0, 4063312, 0, 0, 4063321, 0, 0, 4063331, 0, 0, 4194271, 0, 0, 4194297, 0, 0, 4128848, 0, 0, 4128849, 0, 0, 4128850, 0, 0, 4128851, 0, 0, 4128852, 0, 0, 4128853, 0, 0, 4128854, 0, 0, 4128855, 0, 0, 4128856, 0, 0, 4128867, 0, 0, 4259807, 0, 0, 4259833, 0, 0, 4194384, 0, 0, 4194403, 0, 0, 4325343, 0, 0, 4325369, 0, 0, 4259939, 0, 0, 4390879, 0, 0, 4390905, 0, 0, 4325475, 0, 0, 4456415, 0, 0, 4456441, 0, 0, 4391011, 0, 0, 4521951, 0, 0, 4521977, 0, 0, 4456547, 0, 0, 4587487, 0, 0, 4587513, 0, 0, 4522083, 0, 0, 4653023, 0, 0, 4653049, 0, 0, 4587619, 0, 0, 4718559, 0, 0, 4718585, 0, 0, 4653155, 0, 0, 4784095, 0, 0, 4718597, 0, 0, 4718598, 0, 0, 4718599, 0, 0, 4718600, 0, 0, 4718601, 0, 0, 4718602, 0, 0, 4718603, 0, 0, 4718604, 0, 0, 4718605, 0, 0, 4718606, 0, 0, 4718607, 0, 0, 4718608, 0, 0, 4718609, 0, 0, 4718610, 0, 0, 4718611, 0, 0, 4718612, 0, 0, 4718613, 0, 0, 4718614, 0, 0, 4718615, 0, 0, 4718616, 0, 0, 4718617, 0, 0, 4718618, 0, 0, 4718619, 0, 0, 4718620, 0, 0, 4718621, 0, 0, 4718622, 0, 0, 4718623, 0, 0, 4718624, 0, 0, 4718625, 0, 0, 4718626, 0, 0, 4718627, 0, 0, 4718628, 0, 0, 4718629, 0, 0, 4718630, 0, 0, 4718631, 0, 0, 4718632, 0, 0, 4718633, 0, 0, 4718634, 0, 0, 4718663, 0, 0, 4718664, 0, 0, 4718665, 0, 0, 4718666, 0, 0, 4718667, 0, 0, 4718668, 0, 0, 4718669, 0, 0, 4718670, 0, 0, 4718671, 0, 0, 4718672, 0, 0, 4718673, 0, 0, 4718674, 0, 0, 4718675, 0, 0, 4718676, 0, 0, 4718677, 0, 0, 4718678, 0, 0, 4718679, 0, 0, 4718680, 0, 0, 4718681, 0, 0, 4718682, 0, 0, 4718683, 0, 0, 4718684, 0, 0, 4718685, 0, 0, 4718686, 0, 0, 4718687, 0, 0, 4718688, 0, 0, 4718691, 0, 0, 4849631, 0, 0, 4784171, 0, 0, 4784172, 0, 0, 4784199, 0, 0, 4784227, 0, 0, 4915167, 0, 0, 4849735, 0, 0, 4849763, 0, 0, 4980703, 0, 0, 4915271, 0, 0, 4915299, 0, 0, 5046239, 0, 0, 4980807, 0, 0, 4980808, 0, 0, 4980835, 0, 0, 5111775, 0, 0, 5046371, 0, 0, 5177312, 0, 0, 5111907, 0, 0, 5242848, 0, 0, 5177443, 0, 0, 5308384, 0, 0, 5242979, 0, 0, 5373920, 0, 0, 5308515, 0, 0, 5439456, 0, 0, 5374051, 0, 0, 5504992, 0, 0, 5439587, 0, 0, 5570527, 0, 0, 5570528, 0, 0, 5570529, 0, 0, 5570530, 0, 0, 5570531, 0, 0, 5570532, 0, 0, 5570533, 0, 0, 5570534, 0, 0, 5570535, 0, 0, 5570536, 0, 0, 5570537, 0, 0, 5570538, 0, 0, 5570539, 0, 0, 5570540, 0, 0, 5570541, 0, 0, 5570542, 0, 0, 5570543, 0, 0, 5570544, 0, 0, 5570545, 0, 0, 5570546, 0, 0, 5570547, 0, 0, 5570548, 0, 0, 5570549, 0, 0, 5570550, 0, 0, 5505059, 0, 0, 5505060, 0, 0, 5505061, 0, 0, 5505062, 0, 0, 5505063, 0, 0, 5505064, 0, 0, 5505065, 0, 0, 5505066, 0, 0, 5505067, 0, 0, 5505068, 0, 0, 5505069, 0, 0, 5505070, 0, 0, 5505071, 0, 0, 5505072, 0, 0, 5505073, 0, 0, 5505074, 0, 0, 5505075, 0, 0, 5505076, 0, 0, 5505077, 0, 0, 5505078, 0, 0, 5505079, 0, 0, 5505080, 0, 0, 5505081, 0, 0, 5505082, 0, 0, 5505083, 0, 0, 5505084, 0, 0, 5505085, 0, 0, 5505086, 0, 0, 5505087, 0, 0, 5505088, 0, 0, 5505089, 0, 0, 5505090, 0, 0, 5505091, 0, 0, 5505092, 0, 0, 5505093, 0, 0, 5505094, 0, 0, 5505095, 0, 0, 5505096, 0, 0, 5505097, 0, 0, 5505098, 0, 0, 5505099, 0, 0, 5505100, 0, 0, 5505101, 0, 0, 5505102, 0, 0, 5505103, 0, 0, 5505123, 0, 0, 5636063, 0, 0, 5636064, 0, 0, 5636086, 0, 0, 5636087, 0, 0, 5636088, 0, 0, 5636089, 0, 0, 5636090, 0, 0, 5636091, 0, 0, 5636092, 0, 0, 5636093, 0, 0, 5636094, 0, 0, 5636095, 0, 0, 5570560, 0, 0, 5570561, 0, 0, 5570562, 0, 0, 5570563, 0, 0, 5570564, 0, 0, 5570565, 0, 0, 5570566, 0, 0, 5570567, 0, 0, 5570568, 0, 0, 5570569, 0, 0, 5570570, 0, 0, 5570571, 0, 0, 5570572, 0, 0, 5570573, 0, 0, 5570574, 0, 0, 5570575, 0, 0, 5570576, 0, 0, 5570577, 0, 0, 5570578, 0, 0, 5570579, 0, 0, 5570580, 0, 0, 5570581, 0, 0, 5570582, 0, 0, 5570583, 0, 0, 5570584, 0, 0, 5570585, 0, 0, 5570586, 0, 0, 5570587, 0, 0, 5570588, 0, 0, 5570589, 0, 0, 5570590, 0, 0, 5570591, 0, 0, 5570592, 0, 0, 5570593, 0, 0, 5570594, 0, 0, 5570640, 0, 0, 5570641, 0, 0, 5570642, 0, 0, 5570643, 0, 0, 5570644, 0, 0, 5570645, 0, 0, 5570646, 0, 0, 5570647, 0, 0, 5570648, 0, 0, 5570649, 0, 0, 5570650, 0, 0, 5570651, 0, 0, 5570652, 0, 0, 5570653, 0, 0, 5570654, 0, 0, 5570655, 0, 0, 5570656, 0, 0, 5570657, 0, 0, 5570658, 0, 0, 5570659, 0, 0 )

[node name="Boss" type="Node" parent="."]

[node name="Boss" parent="Boss" instance=ExtResource( 6 )]
position = Vector2( 1465, 1307 )

[node name="Boss2" parent="Boss" instance=ExtResource( 12 )]
position = Vector2( 310, -456 )

[node name="HellDog" type="Node" parent="."]

[node name="HellDog" parent="HellDog" instance=ExtResource( 8 )]
position = Vector2( 1208, -178 )

[node name="HellDog2" parent="HellDog" instance=ExtResource( 8 )]
position = Vector2( 1099, -268 )

[node name="HellDog3" parent="HellDog" instance=ExtResource( 8 )]
position = Vector2( 956, -208 )

[node name="HellDog4" parent="HellDog" instance=ExtResource( 8 )]
position = Vector2( 947, -346 )

[node name="HellDog5" parent="HellDog" instance=ExtResource( 8 )]
position = Vector2( 894, -489 )

[node name="Ghost" type="Node" parent="."]

[node name="Ghost" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( -276, 1186 )

[node name="Ghost2" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 256, 815 )

[node name="Ghost3" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 253, 901 )

[node name="Ghost4" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 1211, 664 )

[node name="Ghost5" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 1006, 785 )

[node name="Ghost6" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 1357, 193 )

[node name="Ghost7" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 1468, -198 )

[node name="Ghost8" parent="Ghost" instance=ExtResource( 7 )]
position = Vector2( 858, 19 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" parent="UI" instance=ExtResource( 11 )]

[node name="Teleport" type="Node" parent="."]

[node name="Teleport2" parent="Teleport" instance=ExtResource( 13 )]
position = Vector2( -806, -657 )

[node name="Teleport" parent="Teleport" instance=ExtResource( 13 )]
position = Vector2( 1571, 1307 )

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Player/SpellTimer" to="." method="_on_SpellTimer_timeout"]
